--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 }
 
 :root {
+  --header-button-color: #24a0ed;
+
   height: 100%;
   display: flex;
   justify-content: center;
@@ -38,6 +40,18 @@ input[type="text"] {
 
 } */
 
+.border {
+  width: 100%;
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+  border: 1px solid black;
+}
+
+.button-icon {
+  height: 1rem;
+  width: 1rem;
+}
+
 .card {
   height: 300px;
   width: 200px;
@@ -65,14 +79,22 @@ input[type="text"] {
 }
 
 .create-button {
-  height: 50px;
-  width: 50px;
-  font-size: 2rem;
-  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  background-color: var(--header-button-color);
+  border: none;
+  border-radius: 16px;
 }
 
-.create-button::after {
-  content: "+";
+.create-button:hover {
+  filter: brightness(0.8);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(215px, 1fr));
+  grid-auto-rows: minmax(315px, 1fr);
 }
 
 .icon {
@@ -91,18 +113,6 @@ input[type="text"] {
   position: absolute;
   overflow-x: hidden;
   background-color: rgba(0, 0, 0, 0.5);
-}
-
-.border {
-  width: 100%;
-  margin: 2rem 0;
-  border: 1px solid black;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 1fr);
-  grid-auto-rows: 1fr;
 }
 
 .shadow {
