--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ form {
 }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],
+select {
   width: 100%;
   padding: 0.25rem;
   border: 2px solid black;
