Add fxn to delete books and refactored form reset
A parent function was created to house all the functions needed to reset
the overlay form. This was done for readability purposes.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 :root {
   --header-button-color: #24a0ed;
+  --delete-button-color: #dc3545;
   --valid: #00ff00;
   --visibility: hidden;
   --error: #ff0000;
@@ -110,6 +111,10 @@ input.error {
 
 .close-overlay:hover {
   filter: brightness(0.7);
+}
+
+.delete-button {
+  background-color: var(--delete-button-color);
 }
 
 .edit {
