--- a/style.css
+++ b/style.css
@@ -3,22 +3,23 @@
 }
 
 :root {
-  --header-button-color: #24a0ed;
+  --card-background-color: #f6f4f3;
   --delete-button-color: #dc3545;
+  --header-background-color: #f3d3bd;
+  --header-button-color: #24a0edde;
+  --error: #ff0000;
   --valid: #00ff00;
   --visibility: hidden;
-  --error: #ff0000;
   --icon-url: "";
 
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
 }
 
 body {
   height: 100%;
-  width: 100%;
   margin: auto;
   position: relative;
 }
@@ -40,6 +41,23 @@ form {
   border-radius: 8px;
 }
 
+h1 {
+  margin: 1rem 0;
+  font-family: "Signika";
+}
+
+h3 {
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+}
+
+header {
+  padding: 2rem 2rem 0.5rem 2rem;
+  border-bottom: 2px solid black;
+  background-color: var(--header-background-color);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.16);
+}
+
 input[type="text"],
 input[type="number"],
 select {
@@ -59,7 +77,12 @@ input.error {
   box-shadow: 0 0 2px var(--error);
 }
 
-.add-button {
+main {
+  padding: 2rem;
+}
+
+.add-button,
+.demo-button {
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
@@ -67,15 +90,13 @@ input.error {
   border-radius: 16px;
 }
 
-.add-button:hover {
+.add-button:hover,
+.demo-button:hover {
   filter: brightness(0.8);
 }
 
-.border {
-  width: 100%;
-  margin-top: 0.5rem;
-  margin-bottom: 2rem;
-  border: 1px solid black;
+.body-subcontainer {
+  min-width: 768px;
 }
 
 .button-icon {
@@ -87,9 +108,10 @@ input.error {
   height: 100%;
   width: 100%;
   display: flex;
+  position: relative;
   border: 2px solid black;
   border-radius: 8px;
-  position: relative;
+  background-color: var(--card-background-color);
 }
 
 .card h2,
@@ -195,7 +217,7 @@ input.error {
 }
 
 .list-view {
-  grid-template-columns: minmax(600px, 1fr);
+  grid-template-columns: minmax(370px, 1fr);
   grid-auto-rows: 3rem;
 }
 
@@ -212,6 +234,17 @@ input.error {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.primary-buttons-container {
+  display: flex;
+  gap: 1rem;
+}
+
+.site-name {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .shadow {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
@@ -221,7 +254,8 @@ input.error {
   align-items: center;
   background-color: white;
   gap: 0.25rem;
-  padding: 0 0.5rem; 
+  padding: 0 0.5rem;
+  background-color: var(--header-background-color);
 }
 
 .view-button:hover {
