--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   --delete-button-color: #dc3545;
   --header-background-color: #f3d3bd;
   --header-button-color: #24a0edde;
+  --submit-button-color: #24a0edde;
   --error: #ff0000;
   --valid: #00ff00;
   --visibility: hidden;
@@ -31,14 +32,15 @@ button {
 }
 
 form {
-  height: 350px;
-  width: 250px;
+  width: 350px;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   padding: 1.5rem;
   border: 2px solid black;
   border-radius: 8px;
+  background-color: var(--card-background-color);
+  position: relative;
 }
 
 h1 {
@@ -64,7 +66,6 @@ select {
   width: 100%;
   padding: 0.25rem;
   border: 2px solid black;
-  border-radius: 8px;
 }
 
 input.valid {
@@ -82,7 +83,8 @@ main {
 }
 
 .add-button,
-.demo-button {
+.demo-button,
+.submit-button {
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
@@ -91,7 +93,12 @@ main {
 }
 
 .add-button:hover,
-.demo-button:hover {
+.demo-button:hover,
+.delete-button:hover,
+.edit-card-style:hover,
+.edit-list-style:hover,
+.submit-button:hover,
+.view-button:hover {
   filter: brightness(0.8);
 }
 
@@ -142,8 +149,8 @@ main {
   background-color: rgba(0, 0, 0, 0);
   border: none;
   position: absolute;
-  top: calc(50% - 250px);
-  right: calc(50% - 200px);
+  top: -60px;
+  right: -60px;
 }
 
 .close-overlay:hover {
@@ -151,7 +158,12 @@ main {
 }
 
 .delete-button {
+  align-self: center;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
   background-color: var(--delete-button-color);
+  border-radius: 16px;
 }
 
 .edit-card-style {
@@ -160,12 +172,8 @@ main {
   right: 0.5rem;
 }
 
-.edit-card-style:hover {
-  filter: brightness(0.9);
-}
-
-.edit-list-style:hover {
-  filter: brightness(0.9);
+.error-message {
+  color: var(--error);
 }
 
 .grid-container {
@@ -230,8 +238,9 @@ main {
   top: 0;
   left: 0;
   position: absolute;
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
 }
 
 .primary-buttons-container {
@@ -249,6 +258,10 @@ main {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
+.submit-button {
+  align-self: center;
+}
+
 .view-button {
   display: flex;
   align-items: center;
@@ -256,10 +269,6 @@ main {
   gap: 0.25rem;
   padding: 0 0.5rem;
   background-color: var(--header-background-color);
-}
-
-.view-button:hover {
-  filter: brightness(0.8);
 }
 
 .view-button-container {
