--- a/style.css
+++ b/style.css
@@ -84,7 +84,8 @@ main {
 
 .add-button,
 .demo-button,
-.submit-button {
+.submit-button,
+.no-button {
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
@@ -115,10 +116,17 @@ main {
   height: 100%;
   width: 100%;
   display: flex;
-  position: relative;
   border: 2px solid black;
   border-radius: 8px;
   background-color: var(--card-background-color);
+}
+
+.card-button-container {
+  align-self: flex-end;
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+  gap: 1rem;
 }
 
 .card h2,
@@ -166,11 +174,32 @@ main {
   border-radius: 16px;
 }
 
-.edit-card-style {
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
+.delete-confirmation-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  border: 1px solid black;
+  border-radius: 8px;
+  background-color: var(--card-background-color);
+  transform: scale(1);
 }
+
+.delete-confirmation-buttons {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+/* .edit-delete-button-container {
+} */
+
+/* .edit-button-card-position {
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.5rem;
+} */
 
 .error-message {
   color: var(--error);
