--- a/style.css
+++ b/style.css
@@ -52,16 +52,16 @@ h1 {
   font-family: "Signika";
 }
 
-h3 {
-  margin-top: 1rem;
-  margin-bottom: 3rem;
-}
-
 header {
   padding: 2rem 2rem 0.5rem 2rem;
   border-bottom: 2px solid black;
   background-color: var(--header-background-color);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.16);
+}
+
+header > h3 {
+  margin-top: 1rem;
+  margin-bottom: 3rem;
 }
 
 input[type="text"],
@@ -113,36 +113,46 @@ main {
   border: 2px solid black;
   border-radius: 8px;
   background-color: var(--card-background-color);
+  text-align: center;
 }
 
-.card-button-container {
-  align-self: flex-end;
+.card-book-info-container {
+  height: 100%;
   display: flex;
+  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
-  margin-right: 1rem;
-  gap: 1rem;
+  margin: 0 1rem;
 }
 
-.card h2,
+.card h4,
 .card p {
   margin: 0;
 }
 
-.card.card-style {
+.card-style {
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
 }
 
-.card.list-style {
+.card-style > .card-button-container {
+  align-self: flex-end;
+  display: flex;
+  align-items: center;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  gap: 1rem;
+}
+
+.list-style {
   flex-direction: row;
   align-items: center;
   flex: 1;
   padding: 0 1rem;
 }
 
-.card.list-style h2,
-.card.list-style p {
+.list-style h4,
+.list-style p {
   flex: 1;
 }
 
