--- a/style.css
+++ b/style.css
@@ -113,16 +113,22 @@ main {
   border: 2px solid black;
   border-radius: 8px;
   background-color: var(--card-background-color);
-  text-align: center;
 }
 
 .card-book-info-container {
   height: 100%;
   display: flex;
-  justify-content: space-around;
   flex-direction: column;
   align-items: center;
-  margin: 0 1rem;
+}
+
+.card-button-container {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.card-button-container button {
+  background-color: var(--card-background-color);
 }
 
 .card h4,
@@ -135,25 +141,45 @@ main {
   justify-content: space-between;
 }
 
+.card-style > .card-book-info-container {
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 1rem;
+  text-align: center;
+}
+
 .card-style > .card-button-container {
   align-self: flex-end;
-  display: flex;
   align-items: center;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
-  gap: 1rem;
 }
 
 .list-style {
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  flex: 1;
-  padding: 0 1rem;
+  gap: 0.5rem;
+  padding: 1rem;
 }
 
-.list-style h4,
+.list-style h4 {
+  flex: 4;
+}
+
 .list-style p {
   flex: 1;
+}
+
+.list-style > .card-book-info-container {
+  width: 100%;
+  flex-direction: row;
+  gap: 0.75rem;
+  text-align: left;
+}
+
+.list-style > .card-button-container {
+  justify-content: flex-end;
 }
 
 .close-overlay {
@@ -249,8 +275,8 @@ main {
 }
 
 .list-view {
-  grid-template-columns: minmax(370px, 1fr);
-  grid-auto-rows: 3rem;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 3.5rem;
 }
 
 .overlay {
